--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+#Travelling Salesman Distance Calculator
+
 Genetic algorithm to find an optimised solution to the Travelling Salesman Problem.
 The program dynamically reads in city data from a file and calculates the shortest distance it can find, linking all cities.
 The actual physical distance on the route, calculated as the Haversine distance, is also shown.
